--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
 <!--Portfolio Index-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Geo Bio</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link rel="icon" type="image/x-icon" href="images/placeholder-logo.jpg">
+    </head>
+    <body style="background-color: #1B1B29;">
+        <!--HEADER--><header class="navigation" class="top-nav">
+            <!--Name Etc.--><div class="inline-block" class="logo">
+                <img src="images/placeholder-logo.jpg">
+                <h2>
+                    Geoffrey Kuhns
+                </h2>
+            </div>
+            <!--Links Etc.--><nav class="inline-block">
+                <ul>
+                    <li><h5>Work</h5></li>
+                    <li><h5>About</h5></li>
+                    <li><h5>Contact</h5></li>
+                    <li><h5>Personal</h5></li>
+                </ul>
+            </nav>
+        </header>
+        <!--LEFT--><section class="body-left">
+            <h1>
+                Inspiring Quote that Informs Identity and Work
+            </h1>
+            <div class="card">
+                <h3>Card Title</h3>
+                <p>
+                    Enticing life-timeline factoid which can expand into further detail--relevant to Work, since not Personal.
+                </p>
+                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic">
+            </div>
+            <div class="card">
+                <h3>Card Title</h3>
+                <p>
+                    Enticing life-timeline factoid which can expand into further detail--relevant to Work, since not Personal.
+                </p>
+                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic">
+            </div>
+            <div class="card">
+                <h3>Card Title</h3>
+                <p>
+                    Enticing life-timeline factoid which can expand into further detail--relevant to Work, since not Personal.
+                </p>
+                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic">
+            </div>
+        </section>
+        <!--RIGHT--><section class="body-right">
+            <img src="images/Space Violet - Frank Cone.jpeg" class="hero-pic">
+            <h4>
+                Picture Explanation
+            </h4>
+        </section>
+        <!--FOOTER--><footer class="navigation" class="bot-nav">
+            <!--Social Media--><nav class="inline-block">
+                <a href="https://www.linkedin.com/in/geoffrey-kuhns-46357425/"><img src="images/placeholder-logo.jpg" alt="Linked In"></a>
+                <img src="images/placeholder-logo.jpg" alt="other social media">
+             </nav>
+        </footer>
+    </body>
+</html>
