header & footer align; font fail
Got Header and Footer elements to line up, but list element positions are based on the Left, not Right aligned = poor RWD.
Started to implement Fonts, but they don't display as intended--at least start with working on MY screen!

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <head>
         <title>Geo Bio</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link rel="icon" type="image/x-icon" href="images/placeholder-logo.jpg">
+        <link rel="icon" type="image/x-icon" href="images/placeholder-logo.jpg" alt="starry abyss">
     </head>
     <body style="background-color: #1B1B29;">
         <!--HEADER--><header class="navigation" class="top-nav">
-            <!--Name Etc.--><div class="inline-block" class="logo">
-                <img src="images/placeholder-logo.jpg">
-                <h2>
+            <!--Name Etc.--><div class="inline-block">
+                <img src="images/placeholder-logo.jpg" class="logo" alt="Geo Portrait">
+                <h2 style="width: 250px; margin:5%">
                     Geoffrey Kuhns
                 </h2>
             </div>
-            <!--Links Etc.--><nav class="inline-block">
+            <!--Links Etc.--><nav class="inline-block" style="margin-left: 40%">
                 <ul>
-                    <li><h5>Work</h5></li>
-                    <li><h5>About</h5></li>
-                    <li><h5>Contact</h5></li>
-                    <li><h5>Personal</h5></li>
+                    <li class="list-format"><a href=""><h5>Work</h5></a></li>
+                    <li class="list-format"><a href=""><h5>About</h5></a></li>
+                    <li class="list-format"><a href=""><h5>Contact</h5></a></li>
+                    <li class="list-format"><a href=""><h5>Personal</h5></a></li>
                 </ul>
             </nav>
         </header>
@@ -32,31 +32,31 @@
                 <p>
                     Enticing life-timeline factoid which can expand into further detail--relevant to Work, since not Personal.
                 </p>
-                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic">
+                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic" alt="Sample 1">
             </div>
             <div class="card">
                 <h3>Card Title</h3>
                 <p>
                     Enticing life-timeline factoid which can expand into further detail--relevant to Work, since not Personal.
                 </p>
-                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic">
+                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic" alt="Sample 2">
             </div>
             <div class="card">
                 <h3>Card Title</h3>
                 <p>
                     Enticing life-timeline factoid which can expand into further detail--relevant to Work, since not Personal.
                 </p>
-                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic">
+                <img src="images/Negative Sun - Pixabay.jpeg" class="card-pic" alt="Sample 3">
             </div>
         </section>
         <!--RIGHT--><section class="body-right">
-            <img src="images/Space Violet - Frank Cone.jpeg" class="hero-pic">
+            <img src="images/Space Violet - Frank Cone.jpeg" class="hero-pic" alt="Galaxy Hero">
             <h4>
                 Picture Explanation
             </h4>
         </section>
         <!--FOOTER--><footer class="navigation" class="bot-nav">
-            <!--Social Media--><nav class="inline-block">
+            <!--Social Media--><nav class="inline-block" style="margin-left: 90%;">
                 <a href="https://www.linkedin.com/in/geoffrey-kuhns-46357425/"><img src="images/placeholder-logo.jpg" alt="Linked In"></a>
                 <img src="images/placeholder-logo.jpg" alt="other social media">
              </nav>
