hover: shadows & anims; personal page
text hover states (menu, quote)
logo expansion
put stat animations in place, but they're just placeholder "bigger"
did same for social icons

--- a/personal.html
+++ b/personal.html
@@ -20,10 +20,10 @@
             <!--Links Etc.-->
             <nav id="navButton">
                 <ul>
-                    <li class="list-format"><a href=""><h5>Work</h5></a></li>
+                    <li class="list-format"><a href="index.html"><h5>Work</h5></a></li>
                     <li class="list-format"><a href=""><h5>About</h5></a></li>
                     <li class="list-format"><a href=""><h5>Contact</h5></a></li>
-                    <li class="list-format"><a href="personal.html"><h5>Personal</h5></a></li>
+                    <li class="list-format"><a href=""><h5>Personal</h5></a></li>
                 </ul>
             </nav>
         </header>
@@ -48,7 +48,7 @@
                         Preserve the neighborly feel of a local nonprofit in need of a facelift.
                         <br><b>Roles:</b> Client Services, Interaction Designer
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" alt="Drive a Senior Northwest">
+                    <img src="images/KnightDraw.jpg" class="cardPic" alt="Drive a Senior Northwest">
                 </div>
                 <div class="card" id="cardLegacy">
                     <h3 class="cardTitle">Tabletop RPG</h3>
@@ -72,7 +72,7 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                <img src="images/Space Violet - Frank Cone.jpeg" id="heroPic" alt="Main Display Picture"></a>
+                <img src="images/Vision Board.jpg" id="heroPic" alt="Main Display Picture"></a>
                 <h4 id="heroText">
                     Roll over a project to investigate here.
                 </h4>
