--- a/personal.html
+++ b/personal.html
@@ -43,7 +43,7 @@
             </div>
             <div id="detailColumn" class="bodyColumn">
                 <div class="card" id="cardDASNW">
-                    <h3 class="cardTitle">Site Redesign</h3>
+                    <h3 class="cardTitle">Check This Out --></h3>
                     <p class="cardDetails">
                         Preserve the neighborly feel of a local nonprofit in need of a facelift.
                         <br><b>Roles:</b> Client Services, Interaction Designer
@@ -78,9 +78,9 @@
                 </h4>
                 <div id="heroStatLeft">
                     <img src="images/Pie Chart.png" class="statIcon" alt="Pie Chart">
-                    <br><br><br><br><h2>42%</h2>
+                    <br><br><br><br><h2>40%</h2>
                     <p>
-                        Insightful Deduction
+                        Less Insightful Deduction
                     </p>
                 </div>
                 <div id="heroStatGap">
@@ -88,9 +88,9 @@
                 </div>
                 <div id="heroStatRight">
                     <img src="images/Crosshair.png" class="statIcon" alt="Cross Hair">
-                    <br><br><br><br><h2>42%</h2>
+                    <br><br><br><br><h2>40%</h2>
                     <p>
-                        Insightful Deduction
+                        More Insightful Deduction
                     </p>
                 </div>
             </div>
