--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <!--Links Etc.-->
             <nav id="navButton">
                 <ul>
-                    <li class="list-format"><a href=""><h5 id="nav1">About</h5></a></li>
-                    <li class="list-format"><a href=""><h5 id="nav2">Work</h5></a></li>
-                    <li class="list-format"><a href=""><h5 id="nav3">Legacy</h5></a></li>
+                    <li class="list-format"><a href="index.html"><h5 id="nav1">About</h5></a></li>
+                    <li class="list-format"><a href="work.html"><h5 id="nav2">Work</h5></a></li>
+                    <li class="list-format"><a href="legacy.html"><h5 id="nav3">Legacy</h5></a></li>
                     <li class="list-format"><a href="personal.html"><h5 id="nav4">Personal</h5></a></li>
                 </ul>
             </nav>
@@ -28,10 +28,10 @@
         <!--Quote/Inspiration-->
         <section id="bannerQuote">
             <h1 id="hQuote">
-                Every saint has a past, and every sinner has a future.
+                The eye of the master will do more work than both his hands.
             </h1>
             <h4 class="normText" id="hAuthor">
-                ~Oscar Wilde
+                ~Benjamin Franklin
             </h4>
         </section>
         <!--Content: Main Body of-->
@@ -40,29 +40,29 @@
                 <!--left gutter-->
             </div>
             <div id="detailColumn" class="bodyColumn">
-                <div class="card" id="cardDASNW">
-                    <h3 class="cardTitle normText">Site Redesign</h3>
+                <div class="card" id="about-lead">
+                    <h3 class="cardTitle normText">Leadership</h3>
                     <p class="cardDetails normText">
-                        Preserve the neighborly feel of a local nonprofit in need of a facelift.
-                        <br><b>Roles:</b> Client Services, Interaction Designer
+                        In service for your greater good, Geoffrey shows you how to do it, coaches to it, and then holds you accountable.
+                        <br><b>Virtues:</b> Attentive, Humble, First On-Last Off
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" id="cardPic-DASNW" alt="Drive a Senior Northwest">
+                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-lead" alt="Drive a Senior Northwest">
                 </div>
-                <div class="card" id="cardLegacy">
-                    <h3 class="cardTitle normText">Tabletop RPG</h3>
+                <div class="card" id="about-change">
+                    <h3 class="cardTitle normText">Change Management</h3>
                     <p class="cardDetails normText">
-                        Test and weave worldbuilding, modular narratives, and high octane action.
-                        <br><b>Roles:</b> Creative Director, Lead Designer
+                        Learn to do it right before you do it fast. Geoffrey leverages Lean Six Sigma methodology with his vast training acumen to do it right the first, last, and every time.
+                        <br><b>Survived Him:</b> Go Kart User Flow, Staff Appreciation Day, Contact Center Priorities
                     </p>
-                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="cardPic-Legacy" alt="Sample 3">
+                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-change" alt="Sample 3">
                 </div>
-                <div class="card" id="cardHGem">
-                    <h3 class="cardTitle normText">Travel App</h3>
+                <div class="card" id="about-user">
+                    <h3 class="cardTitle normText">User Centric</h3>
                     <p class="cardDetails normText">
-                        Uncover and solve a hidden need of modern travelers.
-                        <br><b>Roles:</b> Researcher, UI Designer
+                        Customers: first. Those who work with customers: first-er. Geoffrey knows how to transform baseline, qualitative interactions to drive KPIs.
+                        <br><b>Industry Breadth:</b> Insurance, Food & Beverage, Retail, Contact Center, Board Director
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="cardPic-HGem" alt="Sample 2">
+                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-user" alt="Sample 2">
                 </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
