--- a/legacy.html
+++ b/legacy.html
@@ -28,10 +28,10 @@
         <!--Quote/Inspiration-->
         <section id="bannerQuote">
             <h1 id="hQuote">
-                Every saint has a past, and every sinner has a future.
+                Fiction reveals truths that reality obscures.
             </h1>
             <h4 class="normText" id="hAuthor">
-                ~Oscar Wilde
+                ~Jessamyn West
             </h4>
         </section>
         <!--Content: Main Body of-->
@@ -40,29 +40,29 @@
                 <!--left gutter-->
             </div>
             <div id="detailColumn" class="bodyColumn">
-                <div class="card" id="pers-games">
-                    <h3 class="cardTitle normText">Games</h3>
+                <div class="card" id="legacy-rpg">
+                    <h3 class="cardTitle normText">Tabletop RPG</h3>
                     <p class="cardDetails normText">
-                        Game days are too few, so Geoffrey just reminds himself to take a break over board or video games--sometimes.
-                        <br><b>Top 5+:</b> Super Smash Brothers, Dice Thrones, Mass Effect, King of Tokyo, Smite, Ghost Stories, Hades
+                        Learn the holistic story behind <i>Legacy Revelations</i>, a high-octane, sci-fantasy epic.
+                        <br><b>Weaves Together:</b> User Tests, Worldbuilding, Modular Narratives
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-games" alt="Drive a Senior Northwest">
+                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-rpg" alt="Sample 3">
                 </div>
-                <div class="card" id="pers-guru">
-                    <h3 class="cardTitle normText">Unofficial Guru</h3>
+                <div class="card" id="legacy-charSheet">
+                    <h3 class="cardTitle normText">User Interface</h3>
                     <p class="cardDetails normText">
-                        Though personally Catholic, Geoffrey enjoys learning and philosophizing with others willing to go there.
-                        <br><b>Learned From:</b> Islam, Judaism, Paganism, Shamanism, Agnosticism, Atheism
+                        What is a character sheet and why would it change? Discover the motivations and solutions behind its most significant changes.
+                        <br><b>Spoiler:</b> Balance "Necessity" with Player Experience
                     </p>
-                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-guru" alt="Sample 3">
+                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-charSheet" alt="Drive a Senior Northwest">
                 </div>
-                <div class="card" id="pers-hobbies">
-                    <h3 class="cardTitle normText">Austin Convert</h3>
+                <div class="card" id="legacy-con">
+                    <h3 class="cardTitle normText">Showmanship</h3>
                     <p class="cardDetails normText">
-                        Paddleboarding, coffee, local breweries, hiking, fitness, karate, movies--there's never enough time.
-                        <br><b>Hot Spots:</b> Emerald Tavern, Pinballz Lake Creek, nearest trails
+                        From first impressions to last--how <i>Legacy</i> was a consistent convention success.
+                        <br><b>Notable:</b> Comicpalooza, IKKiCON, ChupacabraCon
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-hobbies" alt="Sample 2">
+                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-con" alt="Sample 2">
                 </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
