--- a/work.html
+++ b/work.html
@@ -28,10 +28,10 @@
         <!--Quote/Inspiration-->
         <section id="bannerQuote">
             <h1 id="hQuote">
-                Every saint has a past, and every sinner has a future.
+                Give me six hours to chop down a tree and I will spend the first four sharpening the axe.
             </h1>
             <h4 class="normText" id="hAuthor">
-                ~Oscar Wilde
+                ~Abraham Lincoln
             </h4>
         </section>
         <!--Content: Main Body of-->
@@ -40,29 +40,29 @@
                 <!--left gutter-->
             </div>
             <div id="detailColumn" class="bodyColumn">
-                <div class="card" id="pers-games">
-                    <h3 class="cardTitle normText">Games</h3>
+                <div class="card" id="work-DASNW">
+                    <h3 class="cardTitle normText">Site Redesign</h3>
                     <p class="cardDetails normText">
-                        Game days are too few, so Geoffrey just reminds himself to take a break over board or video games--sometimes.
-                        <br><b>Top 5+:</b> Super Smash Brothers, Dice Thrones, Mass Effect, King of Tokyo, Smite, Ghost Stories, Hades
+                        Preserve the neighborly feel of a local nonprofit in need of a facelift.
+                        <br><b>Roles:</b> Client Services, Interaction Designer
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-games" alt="Drive a Senior Northwest">
+                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-DASNW" alt="Drive a Senior Northwest">
                 </div>
-                <div class="card" id="pers-guru">
-                    <h3 class="cardTitle normText">Unofficial Guru</h3>
+                <div class="card" id="work-SPlant">
+                    <h3 class="cardTitle normText">Project Management</h3>
                     <p class="cardDetails normText">
-                        Though personally Catholic, Geoffrey enjoys learning and philosophizing with others willing to go there.
-                        <br><b>Learned From:</b> Islam, Judaism, Paganism, Shamanism, Agnosticism, Atheism
+                        Bring the best out of 2 other designers in creating an app for would-be plant-lovers.
+                        <br><b>Roles:</b> Project Manager, Interaction Designer
                     </p>
-                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-guru" alt="Sample 3">
+                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-SPlant" alt="Sample 3">
                 </div>
-                <div class="card" id="pers-hobbies">
-                    <h3 class="cardTitle normText">Austin Convert</h3>
+                <div class="card" id="work-HGem">
+                    <h3 class="cardTitle normText">Travel App UX</h3>
                     <p class="cardDetails normText">
-                        Paddleboarding, coffee, local breweries, hiking, fitness, karate, movies--there's never enough time.
-                        <br><b>Hot Spots:</b> Emerald Tavern, Pinballz Lake Creek, nearest trails
+                        Uncover and solve a hidden need of modern travelers.
+                        <br><b>Roles:</b> Researcher, UI Designer
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-hobbies" alt="Sample 2">
+                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-HGem" alt="Sample 2">
                 </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
