--- a/legacy.html
+++ b/legacy.html
@@ -54,7 +54,7 @@
                         What is a character sheet and why would it change? Discover the motivations and solutions behind its most significant changes.
                         <br><b>Spoiler:</b> Balance "Necessity" with Player Experience
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-charSheet" alt="Drive a Senior Northwest">
+                    <img src="images/Legacy-CharSheetHero.jpg" class="cardPic" id="pic-charSheet" alt="Drive a Senior Northwest">
                 </div>
                 <div class="card" id="legacy-con">
                     <h3 class="cardTitle normText">Showmanship</h3>
@@ -62,7 +62,7 @@
                         From first impressions to last--how <i>Legacy</i> was a consistent convention success.
                         <br><b>Notable:</b> Comicpalooza, IKKiCON, ChupacabraCon
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-con" alt="Sample 2">
+                    <img src="images/Dice Setup.JPG" class="cardPic" id="pic-con" alt="Sample 2">
                 </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
@@ -70,7 +70,7 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images/Space Violet - Frank Cone.jpeg" id="heroPic" alt="Main Display Picture">
+                    <img src="images/Legacy-siteSplash.jpg" id="heroPic" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
                     Roll over a project to investigate here.
