--- a/personal.html
+++ b/personal.html
@@ -46,7 +46,7 @@
                         Game days are too few, so Geoffrey just reminds himself to take a break over board or video games--sometimes.
                         <br><b>Top 5+:</b> Super Smash Brothers, Dice Thrones, Mass Effect, King of Tokyo, Smite, Ghost Stories, Hades
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-games" alt="Drive a Senior Northwest">
+                    <img src="images/Smite Screen.JPG" class="cardPic" id="pic-games" alt="Drive a Senior Northwest">
                 </div>
                 <div class="card" id="pers-guru">
                     <h3 class="cardTitle normText">Unofficial Guru</h3>
@@ -54,7 +54,7 @@
                         Though personally Catholic, Geoffrey enjoys learning and philosophizing with others willing to go there.
                         <br><b>Learned From:</b> Islam, Judaism, Paganism, Shamanism, Agnosticism, Atheism
                     </p>
-                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-guru" alt="Sample 3">
+                    <img src="images/KnightDraw.jpg" class="cardPic" id="pic-guru" alt="Sample 3">
                 </div>
                 <div class="card" id="pers-hobbies">
                     <h3 class="cardTitle normText">Austin Convert</h3>
@@ -62,7 +62,7 @@
                         Paddleboarding, coffee, local breweries, hiking, fitness, karate, movies--there's never enough time.
                         <br><b>Hot Spots:</b> Emerald Tavern, Pinballz Lake Creek, nearest trails
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-hobbies" alt="Sample 2">
+                    <img src="images/Austin Oasis.JPG" class="cardPic" id="pic-hobbies" alt="Sample 2">
                 </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
@@ -70,16 +70,16 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images/Space Violet - Frank Cone.jpeg" id="heroPic" alt="Main Display Picture">
+                    <img src="images/Vision Board.jpg" id="heroPic" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
                     Roll over a project to investigate here.
                 </h4>
                 <div id="heroStatLeft">
                     <img id="iconLeft" src="images/Pie Chart.svg" class="statIcon" alt="Pie Chart">
-                    <br><br><br><br><h2 class="normText" id="statNumLeft">42%</h2>
+                    <br><br><br><br><h2 class="normText" id="statNumLeft">81</h2>
                     <p class="normText" id="statTextLeft">
-                        Insightful Deduction
+                        Images Above
                     </p>
                 </div>
                 <div id="heroStatGap">
@@ -87,9 +87,9 @@
                 </div>
                 <div id="heroStatRight">
                     <img id="iconRight" src="images/Crosshair.svg" class="statIcon" alt="Cross Hair">
-                    <br><br><br><br><h2 class="normText" id="statNumRight">42%</h2>
+                    <br><br><br><br><h2 class="normText" id="statNumRight">24%</h2>
                     <p class="normText" id="statTextRight">
-                        Insightful Deduction
+                        Come True
                     </p>
                 </div>
             </div>
