--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
                         Bring the best out of 2 other designers in creating an app for would-be plant-lovers.
                         <br><b>Roles:</b> Project Manager, Interaction Designer
                     </p>
-                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-SPlant" alt="Sample 3">
+                    <img src="images/SoulPlant Hype.jpg" class="cardPic" id="pic-SPlant" alt="Sample 3">
                 </div>
                 <div class="card" id="work-HGem">
                     <h3 class="cardTitle normText">Travel App UX</h3>
@@ -70,7 +70,7 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images/Space Violet - Frank Cone.jpeg" id="heroPic" alt="Main Display Picture">
+                    <img src="images//Efficiency Diagram.JPG" id="heroPic" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
                     Roll over a project to investigate here.
