--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         In service for your greater good, Geoffrey shows you how to do it, coaches to it, and then holds you accountable.
                         <br><b>Virtues:</b> Attentive, Humble, First On-Last Off
                     </p>
-                    <img src="images/DASNW-formats.jpg" class="cardPic" id="pic-lead" alt="Drive a Senior Northwest">
+                    <img src="images/Team Kuhns B.jpg" class="cardPic" id="pic-lead" alt="Drive a Senior Northwest">
                 </div>
                 <div class="card" id="about-change">
                     <h3 class="cardTitle normText">Change Management</h3>
@@ -54,7 +54,7 @@
                         Learn to do it right before you do it fast. Geoffrey leverages Lean Six Sigma methodology with his vast training acumen to do it right the first, last, and every time.
                         <br><b>Survived Him:</b> Go Kart User Flow, Staff Appreciation Day, Contact Center Priorities
                     </p>
-                    <img src="images/Legacy-siteSplash.jpg" class="cardPic" id="pic-change" alt="Sample 3">
+                    <img src="images/WBoard Default.jpg" class="cardPic" id="pic-change" alt="Sample 3">
                 </div>
                 <div class="card" id="about-user">
                     <h3 class="cardTitle normText">User Centric</h3>
@@ -62,7 +62,7 @@
                         Customers: first. Those who work with customers: first-er. Geoffrey knows how to transform baseline, qualitative interactions to drive KPIs.
                         <br><b>Industry Breadth:</b> Insurance, Food & Beverage, Retail, Contact Center, Board Director
                     </p>
-                    <img src="images/HiddenGem-screens.jpg" class="cardPic" id="pic-user" alt="Sample 2">
+                    <img src="images/WOW Boards.JPG" class="cardPic" id="pic-user" alt="Sample 2">
                 </div>
             </div>
             <div id="nullCenter" class="bodyColumn">
@@ -70,7 +70,7 @@
             </div>
             <div id="heroSpace" class="bodyColumn">
                 <a href="caseStudies/Case Study - DASNW.pdf" id="heroRef">
-                    <img src="images/Space Violet - Frank Cone.jpeg" id="heroPic" alt="Main Display Picture">
+                    <img src="images/Steiner August Smaller.jpg" id="heroPic" alt="Main Display Picture">
                 </a>
                 <h4 class="normText" id="heroText">
                     Roll over a project to investigate here.
